--- a/greeter.html
+++ b/greeter.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <h1 class="text-center">Hello World</h1>
-
+        <h3 id="name"></h3>
         <!-- jQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.js"></script>
         <!-- Bootstrap JavaScript -->
