added a css file

--- a/greeter.html
+++ b/greeter.html
@@ -9,6 +9,7 @@
 
         <!-- Bootstrap CSS -->
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.css" rel="stylesheet">
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body class="container">
@@ -21,9 +22,11 @@
         
         
         <div id="question" class="text-center"></div>
-        <div class="answerBtns text-center container">
+        <div class="text-center container" id="answerBtns">
             <button id="btn-A"></button>
             <button id="btn-B"></button>
+            <button id="btn-C"></button>
+            <button id="btn-D"></button>
         </div>
 
 
